// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SchemeCard > renders API Key scheme 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-key h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15.5 7.5 2.3 2.3a1 1 0 0 0 1.4 0l2.1-2.1a1 1 0 0 0 0-1.4L19 4"
          />
          <path
            d="m21 2-9.6 9.6"
          />
          <circle
            cx="7.5"
            cy="15.5"
            r="5.5"
          />
        </svg>
        <h3
          class="text-2xl font-semibold leading-none tracking-tight"
        >
          apiKeyAuth
        </h3>
        <div
          class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
        >
          API Key
        </div>
      </div>
      <p
        class="text-sm text-muted-foreground"
      >
        API Key in header
      </p>
    </div>
    <div
      class="p-6 pt-0"
    >
      <div
        class="space-y-2"
      >
        <p
          class="text-sm"
        >
          Location: 
          <code>
            header
          </code>
           / Name:
           
          <code>
            X-API-Key
          </code>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemeCard > renders HTTP Bearer scheme 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-key-round h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.586 17.414A2 2 0 0 0 2 18.828V21a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h1a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h.172a2 2 0 0 0 1.414-.586l.814-.814a6.5 6.5 0 1 0-4-4z"
          />
          <circle
            cx="16.5"
            cy="7.5"
            fill="currentColor"
            r=".5"
          />
        </svg>
        <h3
          class="text-2xl font-semibold leading-none tracking-tight"
        >
          httpAuth
        </h3>
        <div
          class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
        >
          Bearer JWT
        </div>
      </div>
      <p
        class="text-sm text-muted-foreground"
      >
        JWT authentication
      </p>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p
        class="text-sm text-muted-foreground"
      >
        Expects a JWT in the Authorization header
      </p>
    </div>
  </div>
</div>
`;

exports[`SchemeCard > renders OAuth2 scheme with flows 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-shield-check h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
        <h3
          class="text-2xl font-semibold leading-none tracking-tight"
        >
          oauth2Auth
        </h3>
        <div
          class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
        >
          OAuth 2.0
        </div>
      </div>
    </div>
    <div
      class="p-6 pt-0"
    >
      <div
        class="space-y-4"
      >
        <div
          class="border-l-2 pl-3"
        >
          <div
            class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 mb-2"
          >
            Authorization Code
          </div>
          <div
            class="text-sm"
          >
            <span
              class="font-medium"
            >
              Authorization URL:
            </span>
             
            <a
              class="text-primary underline"
              href="https://auth.example.com/authorize"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://auth.example.com/authorize
            </a>
          </div>
          <div
            class="text-sm"
          >
            <span
              class="font-medium"
            >
              Token URL:
            </span>
             
            <a
              class="text-primary underline"
              href="https://auth.example.com/token"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://auth.example.com/token
            </a>
          </div>
          <div
            class="mt-2"
          >
            <div
              class="text-sm font-medium mb-1"
            >
              Scopes:
            </div>
            <table
              class="text-sm w-full"
            >
              <tbody>
                <tr>
                  <td
                    class="font-mono pr-2"
                  >
                    read
                  </td>
                  <td
                    class="text-muted-foreground"
                  >
                    Read access
                  </td>
                </tr>
                <tr>
                  <td
                    class="font-mono pr-2"
                  >
                    write
                  </td>
                  <td
                    class="text-muted-foreground"
                  >
                    Write access
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
